--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <a class="navbar-brand" href="index.html">
               <span>
-                Picstudio
+                Picstudio Sajid Ibrahim
               </span>
             </a>
             <div class="user_option">
